--- a/index.html
+++ b/index.html
@@ -1,22 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <h1>v.2</h1>
 
-
-
-
-
-
-
-
-</body>
-
+    <button>Boss</button>
+  </body>
 </html>
