--- a/index.html
+++ b/index.html
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-  </head>
+</head>
 
-  <body>
-    <h1>v.2</h1>
+<body>
+    <h1>v.1</h1>
 
-    <button>Boss</button>
-  </body>
+<button style="width : 15px">tack</button>
+
+
+
+
+
+
+</body>
+
 </html>
