[edit] my button

--- a/index.html
+++ b/index.html
@@ -15,20 +15,16 @@
 
 
 
-<button>Kanin</butoon>
-
-
-
-
-</body>
+    <button>Kanin</button>
 
     <button>Boss</button>
-    
+
 
 
 
 
 
     <button>Bank</button>
-  </body>
+</body>
+
 </html>
