--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 
 <body>
     <h1>v.2</h1>
+  
+    
 
-
-
+    <button style="width:80px;height: 30px;background-color:beige;border-radius:5%;border:solid 2px orange;">phet</button>
 
 
 
