--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <button disabled>Jit</button>
     <button>Kanin</button>
-    <button>Bank</button>
+    <button disabled>Bank</button>
 
 
 
