--- a/index.html
+++ b/index.html
@@ -9,9 +9,17 @@
 
 <body>
     <h1>v.2</h1>
+    <button>Boss</button>
+   
 
-  
-<button style="width:80px;height: 30px;background-color:beige;border-radius:5%;border:solid 2px orange;">phet</button>  
+
+
+
+    <button disabled>Jit</button>
+    <button>Kanin</button>
+    <button>Bank</button>
+
+
 
     <button>Boss</button>
 
@@ -21,6 +29,8 @@
 
 
     <button>Touch</button>
+    <button style="width:80px;height: 30px;background-color:beige;border-radius:5%;border:solid 2px orange;">tack</button>  
+    <button style="width:80px;height: 30px;background-color:beige;border-radius:5%;border:solid 2px orange;">phet</button>  
     
 
 
