--- a/index.html
+++ b/index.html
@@ -6,23 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <h1>v.2</h1>
-    <button disabled>Bank</button>
-    <button disabled>Boss</button>
-
-<button style="width:80px;height: 30px;background-color:beige;border-radius:5%;border:solid 2px orange;">phet</button>  
-    <button>Pack</button>
-    <button>Touch</button>
+    <button>Boss</button>
     <button disabled>Jit</button>
     <button>Kanin</button>
- 
-  
+    <button>Bank</button>
+    <button>Boss</button>
+    <button disabled>Boss</button>
+    <button
+        style="width:80px;height: 30px;background-color:beige;border-radius:5%;border:solid 2px orange;">phet</button>
+    <button>Pack</button>
+    <button>Touch</button>
+    <button
+        style="width:80px;height: 30px;background-color:beige;border-radius:5%;border:solid 2px orange;">tack</button>
+    <button disabled>Jit</button>
+    <button>Kanin</button>
+</body>
 
-
-   
-
-
-
-  </body>
 </html>
