--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <button>Boss</button>
     <button disabled>Boss</button>
     <button
-        style="width:80px;height: 30px;background-color:beige;border-radius:5%;border:solid 2px orange;">phet</button>
+        style="width:80px;height: 30px;background-color:beige;border-radius:5%;border:solid 2px orange;">phetza</button>
     <button>Pack</button>
     <button>Touch</button>
     <button
