[UPDATE] feature input

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <button disabled>Jit</button>
     <button>Kanin</button>
     //////////////////// input feature//////////////
+    <input type="text" placeholder="tae">
 
 </body>
 
