[create] new input
- input of jit

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <button disabled>Jit</button>
     <button>Kanin</button>
     //////////////////// input feature//////////////
-
+    <input placeholder="jit">
 </body>
 
 </html>
