--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 
-<body>
+<input>
     <h1>v.2</h1>
     <button>Boss</button>
     <button disabled>Jit</button>
@@ -24,6 +24,7 @@
     <button disabled>Jit</button>
     <button>Kanin</button>
     //////////////////// input feature//////////////
+    <input placeholder="phet"></input>
 
 </body>
 
