--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
     <button>Kanin</button>
     //////////////////// input feature//////////////
 
+    <button>Kanin Merge Test</button>
+
 </body>
 
 </html>
