--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <input placeholder="jit">
     <input type="text" placeholder="bank">
     <input type="text" placeholder="another jit">
+    <input placeholder="Boss" type="number">
 </body>
 
 </html>
