--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <input type="text" placeholder="another jit">
     <input placeholder="Boss" type="number">
     <input type="text" placeholder="phet"></input>
+    <input type="text" placeholder="Touch"></input>
 
 </body>
 
