--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <button>Kanin</button>
     //////////////////// input feature//////////////
 
-    <button>Kanin Merge Test</button>
+    <button>Kanin Mergex</button>
 
     <input type="text" placeholder="tae">
     <input placeholder="jit">
