--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <input placeholder="Boss" type="number">
     <input type="text" placeholder="phet"></input>
     <input type="text" placeholder="Touch"></input>
+    <input placeholder="Pack"/>
 
 </body>
 
